# YouTubeWatcher

./: .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  tor.conf
src/: docker_firefox.py  docker_tor.py  video_element.py  watch_strategy.py  youtube.py
